@@ -2,7 +2,7 @@
 <metadata>
 
     <description>EEA Indicators profile</description>
-    <version>7.4</version>
+    <version>8.7</version>
 
     <dependencies>
         <dependency>profile-Products.ATVocabularyManager:default</dependency>
